# pomelo

./: .gitignore  Dockerfile  Dockerfile.dev  README.md  TODO.md  build.sh  config.toml  docker-compose-dev.yml  docker-compose.example.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
docs/: Config.md  Plugins.md
docs/plugins/: AnyRadios.md  ExploreRadio.md  README.md
melon/: caddy.py  certs.py  config.py  constants.py  logging.py  main.py  plugins.py  routes.py  store.py  strings.py  util.py  wizard.py
plugins/: AnyRadios.py  BetterTrackRadio.py  ExploreRadio.py  SmartShuffle.py
pomelo/: BasePlugin.py  caddy.py  certs.py  config.py  constants.py  main.py  plugin.py  routes.py  store.py  strings.py  util.py  wizard.py
pomelo/plugins/: AnyRadios.py  BetterTrackRadio.py  CustomHubs.py  ExploreRadio.py  YoutubeVideos.py
scripts/: build.sh  run.sh  start_dev.sh
