[project]
name = "pomelo"
version = "0.1.0"
authors = [{name = "Keenan Villani-Holland", email = "keenan@oatmeal.monster"}]
readme = "README.md"

[project.scripts]
pomelo = "pomelo.main:start"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
plexapi = "^4.16.1"
waitress = "^3.0.2"
tomli-w = "^1.2.0"
watchdog = "^6.0.0"
rich = "^14.2.0"
xmltodict = "^1.0.2"

[tool.poetry.scripts]
start = "pomelo.main:start"
start_dev = "pomelo.main:start_dev"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
